--- a/ofPoint.html
+++ b/ofPoint.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap 101 Template</title>
+  <title>ofPoint.h</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,12 +25,38 @@
 
 
 <div class="container">
-
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">types</a> &gt; <span id="classQuickNav">ofPoint.h</span></div>
+    <nav class="navigator" role="navigation">
+      <ul id="nav-parts">
+        <li class="group selected">
+          Topics
+          <ul id="topics">
+            <!--<li class="chapter"><a href="asd">sad</a></li>-->
+          <li class="chapter"><a href="#!!Missingheader!!">!! Missing header !!</a></li></ul>
+      </li></ul>
+    </nav>
     <div class="main">
       <div class="content">
         <div class="classHeader">
-          <h1 id="title">ofDoc</h1>
+          <h1 id="title">ofPoint.h</h1>
         </div>
+        <div class="classDescription"></div>
+        <div class="classMethods"><div id="!!Missingheader!!">
+    <h3 class="sectionHeader">!! Missing header !!</h3>
+    <div class="sectionContent"><div id="a0e9c5f9596918593de99ee1bd275476f">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a0e9c5f9596918593de99ee1bd275476f&quot;)">
+      <span class="type"><a href="ofVec3f.html">ofVec3f</a></span>
+      <a class="name">ofPoint</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a0e9c5f9596918593de99ee1bd275476f_description">
+
+</div>
+
+  </div></div>
+  </div></div>
       </div>
     </div>
 
@@ -62,7 +88,7 @@
       <span class="note"></span>
     </div>
 
-    <div class="methodDescription "  style="display:none"></div>
+    <div class="methodDescription " style="display:none"></div>
 
   </div>
 
