--- a/ofVideoSavedEventArgs.html
+++ b/ofVideoSavedEventArgs.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap 101 Template</title>
+  <title>ofVideoSavedEventArgs</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -25,23 +25,62 @@
 
 
 <div class="container">
-    <div class="quicknav"><a href="index.html">ofDoc</a> > <a id="categoryQuickNav"></a> > <span id="classQuickNav"></span></div>
+    <div class="quicknav"><a href="index.html">ofDoc</a> &gt; <a id="categoryQuickNav">video</a> &gt; <span id="classQuickNav">ofVideoSavedEventArgs</span></div>
     <nav class="navigator" role="navigation">
       <ul id="nav-parts">
         <li class="group selected">
           Topics
           <ul id="topics">
             <!--<li class="chapter"><a href="asd">sad</a></li>-->
-          </ul>
-      </ul>
+          <li class="chapter"><a href="#PublicAttributes">Public Attributes</a></li></ul>
+      </li></ul>
     </nav>
     <div class="main">
       <div class="content">
         <div class="classHeader">
-          <h1 id="title">Hello, world!</h1>
+          <h1 id="title">ofVideoSavedEventArgs</h1>
         </div>
         <div class="classDescription"></div>
-        <div class="classMethods"></div>
+        <div class="classMethods"><div id="PublicAttributes">
+    <h3 class="sectionHeader">Public Attributes</h3>
+    <div class="sectionContent"><div id="a5ec73fd16f90cb67c8a802002fce829e">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a5ec73fd16f90cb67c8a802002fce829e&quot;)">
+      <span class="type">string </span>
+      <a class="name">videoPath</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a5ec73fd16f90cb67c8a802002fce829e_description">
+
+</div>
+
+  </div><div id="a5e4adf6736c0b1e31acecffe20926afd">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a5e4adf6736c0b1e31acecffe20926afd&quot;)">
+      <span class="type"><a href="ofBaseVideoGrabber.html">ofBaseVideoGrabber</a></span>
+      <a class="name">grabber</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a5e4adf6736c0b1e31acecffe20926afd_description">
+
+</div>
+
+  </div><div id="a38ea287128d818b7ecef9d923a739927">
+    <div class="methodHeader" onClick="toggleDescription(&quot;#a38ea287128d818b7ecef9d923a739927&quot;)">
+      <span class="type">string </span>
+      <a class="name">error</a>
+      <span class="args"></span>
+      <span class="note"></span>
+    </div>
+
+    <div class="methodDescription " style="display:none" id="a38ea287128d818b7ecef9d923a739927_description">
+
+</div>
+
+  </div></div>
+  </div></div>
       </div>
     </div>
 
@@ -73,7 +112,7 @@
       <span class="note"></span>
     </div>
 
-    <div class="methodDescription "  style="display:none"></div>
+    <div class="methodDescription " style="display:none"></div>
 
   </div>
 
